--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "contentlayer": "^0.2.5",
     "flowbite": "^1.5.3",
     "flowbite-react": "^0.1.10",
-    "next": "12.2.0",
+    "next": "12.3",
     "next-contentlayer": "^0.2.5",
     "next-optimized-images": "^2.6.2",
     "next-seo": "^5.4.0",
@@ -27,8 +27,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.0",
+    "eslint": "^8.23.1",
+    "eslint-config-next": "^12.3.0",
     "next-compose-plugins": "^2.2.1",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.5"
